RESOLVED FIXED281576
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-center.html
https://bugs.webkit.org/show_bug.cgi?id=281576
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycont...
alan
Reported 2024-10-16 08:29:11 PDT
ssia
Attachments
[fast-cq]Patch (2.98 KB, patch)
2024-10-16 08:32 PDT, alan
no flags
alan
Comment 1 2024-10-16 08:32:10 PDT
Created attachment 472951 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-17 05:30:41 PDT
Committed 285329@main (3224ca9bdb73): <https://commits.webkit.org/285329@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472951 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-17 05:31:16 PDT
Note You need to log in before you can comment on or make changes to this bug.