[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox_justifycontent-center.html https://bugs.webkit.org/show_bug.cgi?id=281576

Reviewed by Antti Koivisto.

Set the correct (maximumSize) member on both axes.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):

Canonical link: https://commits.webkit.org/285329@main